[tool.poetry]
name = "sympy_clone_expression"
version = "0.1.0"
description = "Deepcopy Sympy expressions with evaluate set to False."
authors = ["Blair Azzopardi <blairuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sympy = "^1.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
